--- a/exercises/beatBoxJS/style.css
+++ b/exercises/beatBoxJS/style.css
@@ -1,10 +1,12 @@
 body {
     margin: 0;
+    background-image: url('background.jpg');
+    background-size: cover;    
 }
 
 .container {
     width: 100%;
-    height: 100vh;
+    height: 75vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,7 +15,7 @@ body {
 .beatbox {
     width: 600px;
     height: 600px;
-    background: #333;
+    background: rgb(50, 18, 126);
     border-radius: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -34,11 +36,12 @@ body {
     width: 120px;
     height: 120px;
     border-radius: 10px;
-    border: 5px solid aqua;
-    color: white;
+    border: 5px solid #fbc100fd;
+    color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: sans-serif;
     font-size: 2em;
+    transition: all 0.3s;
 }
